--- a/src/contact.html
+++ b/src/contact.html
@@ -70,16 +70,19 @@
         </h1>
         <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
         <p class="text-3xl font-light lg:pr-24">
-          Let's grab a cup of <span class="text-[#c9d546]"> coffee </span>!
+          Feel free to get in touch
+          <span class="text-[#c9d546]"> anytime </span>!
           <br />
-          I look forward to hearing from you if you find my background and
-          skills intriguing. I'm always open to opportunities for collaboration
-          and dialogue, and it would be a pleasure to discuss how I can
-          contribute to your organization or project. Please feel free to reach
-          out to me at your convenience.
+          I'm always ready for a chat and a cup of coffee. <br />So if you find
+          my profile of any interest to your organization, don't hesitate to
+          reach out! I'm always open to opportunities for collaboration and
+          dialogue, and it would be a pleasure to discuss how I can contribute
+          to your organization.
+          <br />
+
           <br />
           Looking forward to hear from
-          <span class="text-[#c9d546]">you</span>. Feel free to reach out.
+          <span class="text-[#c9d546]">you</span>!
         </p>
       </div>
 
