--- a/src/craftstudio.html
+++ b/src/craftstudio.html
@@ -94,6 +94,14 @@
                 <li
                   class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
                 >
+                  <img src="/images/BiFiletypePhp.svg" class="h-6 pr-2" />
+                  <p class="text-xl font-thin">PHP</p>
+                </li>
+              </div>
+              <div class="col-span-1">
+                <li
+                  class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+                >
                   <img src="/images/PhFigmaLogo 2.svg" class="h-6 pr-2" />
                   <p class="text-xl font-thin">Figma</p>
                 </li>
@@ -107,7 +115,18 @@
                     src="/images/CibAdobeCreativeCloud 2.svg"
                     class="h-6 pr-2"
                   />
-                  <p class="text-xl font-thin">Adobe Cloud</p>
+                  <p class="text-xl font-thin">Photoshop</p>
+                </li>
+              </div>
+              <div class="col-span-1">
+                <li
+                  class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+                >
+                  <img
+                    src="/images/CibAdobeCreativeCloud 2.svg"
+                    class="h-6 pr-2"
+                  />
+                  <p class="text-xl font-thin">Premiere Pro</p>
                 </li>
               </div>
             </div>
@@ -117,12 +136,13 @@
               <a
                 class="container"
                 href="http://craftstudio.dk.dedi3039.your-server.de/"
+                target="_blank"
               >
                 <img src="/images/craft_studio.jpeg" class="w-full h-full" />
                 <div class="overlay">
                   <div class="text">
-                    <p class="font-semibold pb-6">CRAFT STUDIO</p>
-                    <p class="font-thin line-through decoration-1">
+                    <p class="font-semibold pb-6">/ CRAFT STUDIO</p>
+                    <p class="font-thin decoration-1">
                       FINAL EXAM PROJECT AS MULTIMEDIA DESIGNER
                     </p>
                   </div>
@@ -139,70 +159,70 @@
           <div class="lg:grid lg:grid-cols-3 gap-6">
             <div>
               <h3 class="font-semibold text-3xl pt-10 pb-5">
-                / <span class="text-[#c9d546]"> SIGNUP </span> & LOGIN
+                / CONTENT<span class="text-[#c9d546]"> CREATION </span>
               </h3>
               <img src="/images/craft_images.png" alt="" />
               <div class="lg:flex pt-5 lg:pt-10">
                 <p class="text-5xl text-[#c9d546] font-extrabold pr-3">"</p>
 
                 <p class="text-lg font-light pb-5">
-                  The homepage offers options for logging in or signing up. When
-                  a user signs up, a validation email is sent to their
-                  registered email address. When clicking the validation link in
-                  the email, a boolean is used to indicate whether their
-                  verification status is 'true' or 'false'. This action triggers
-                  an update in the database, reflecting whether the user is now
-                  a validated member or not.
+                  Our project began with crafting jewelry from wax, meticulously
+                  sculpting and shaping each piece with precision and care. Our
+                  primary focus was to document the journey from the wax
+                  creation stage through the silver casting process, ultimately
+                  showcasing the jewelry in use. These images offer a glimpse
+                  into the transformative process of shaping wax into silver,
+                  highlighting the art of creation.
                   <br />
                   <br />
-                  Once redirected to the homepage, the user can then log in
-                  using their validated user credentials, with their information
-                  securely stored in the database to confirm their status as a
-                  verified user. Additionally, it securely hashes the password
-                  for enhanced security.
+                  In the post-production phase, we edited each photograph using
+                  Adobe Photoshop. This step ensured that all images adhered to
+                  a consistent visual style.
+                </p>
+              </div>
+            </div>
+
+            <div>
+              <h3 class="font-semibold text-3xl pt-10 pb-5">
+                / WOO <span class="text-[#c9d546]">COMMERSE</span>
+              </h3>
+              <img src="/images/woocommerse.png" alt="" />
+              <div class="lg:flex pt-5 lg:pt-10">
+                <p class="text-5xl text-[#c9d546] font-extrabold pr-3">"</p>
+                <p class="text-lg font-light pb-5">
+                  In our pursuit of delivering a good online shopping
+                  experience, we made use of WooCommerce to establish a fully
+                  functional webshop on our website. This decision was
+                  underpinned by a thorough understanding of user behavior and
+                  preferences. Before WooCommerce was integrated, we conducted
+                  comprehensive user surveys to gain insights into what
+                  constitutes an effective and user-friendly purchasing journey.
                 </p>
               </div>
             </div>
             <div>
               <h3 class="font-semibold text-3xl pt-10 pb-5">
-                / MAKE A<span class="text-[#c9d546]"> TWEET </span>
+                / <span class="text-[#c9d546]"> BRAND </span> & AWARENESS
               </h3>
-              <img src="/images/tows.png" alt="" />
+              <img src="/images/some.png" alt="" />
               <div class="lg:flex pt-5 lg:pt-10">
                 <p class="text-5xl text-[#c9d546] font-extrabold pr-3">"</p>
 
                 <p class="text-lg font-light pb-5">
-                  When a user wishes to create a tweet, they have two options:
-                  They can compose it either via a pop-up modal or by using the
-                  standard tweet input field on the home screen. Once the user
-                  has written their tweet and clicks the 'tweet' button, the
-                  tweet undergoes validation based on predefined criteria to
-                  ensure it meets the requirements for tweet creation.
+                  To establish brand awareness, we strategically crafted
+                  official company profiles on various social media platforms.
+                  Take Instagram, for instance, where our focus was to
+                  encapsulate the entire Craft Studio universe. We aimed to
+                  provide a holistic view of Craft Studio, showcasing not just
+                  the products, but also the people and processes behind the
+                  brand. Through a combination of engaging videos and images, we
+                  offered a glimpse into the artistry of jewelry making, from
+                  the initial concept to the final product in everyday use.
                   <br />
                   <br />
-                  Following successful validation, the tweet is saved in the
-                  database and becomes visible on both the user's home screen
-                  and their profile page.
-                </p>
-              </div>
-            </div>
-            <div>
-              <h3 class="font-semibold text-3xl pt-10 pb-5">
-                / <span class="text-[#c9d546]"> FOLLOW </span> OTHER USERS
-              </h3>
-              <img src="/images/follow.png" />
-              <div class="lg:flex pt-5 lg:pt-10">
-                <p class="text-5xl text-[#c9d546] font-extrabold pr-3">"</p>
-                <p class="text-lg font-light pb-5">
-                  Users have the ability to follow or unfollow one or more other
-                  users. When a user follows or unfollows another user, the
-                  database is updated to reflect both the user who is following
-                  and the user who is being followed.
-                  <br />
-                  <br />
-                  Subsequently, users can view the follower and following counts
-                  on both their followers' and followed users' profile pages,
-                  giving them insights into their network and connections.
+                  Our goal was to create a compelling narrative that resonated
+                  with our audience, allowing them to connect with the essence
+                  and authenticity of Craft Studio.
                 </p>
               </div>
             </div>
