--- a/src/index.html
+++ b/src/index.html
@@ -136,8 +136,8 @@
             <img src="/images/twitter.png" alt="Avatar" class="w-full h-full" />
             <div class="overlay">
               <div class="text">
-                <p class="font-semibold pb-6">TWITTER CLONE</p>
-                <p class="font-thin line-through decoration-1">
+                <p class="font-semibold pb-6">/ TWITTER CLONE</p>
+                <p class="font-thin decoration-1">
                   FULL STACK PROJECT MADE WITH PYTHON, SQLITE AND TAILWIND CSS
                 </p>
               </div>
@@ -152,8 +152,8 @@
             />
             <div class="overlay">
               <div class="text">
-                <p class="font-semibold pb-6">CRAFT STUDIO</p>
-                <p class="font-thin line-through decoration-1">
+                <p class="font-semibold pb-6">/ CRAFT STUDIO</p>
+                <p class="font-thin decoration-1">
                   FINAL EXAM PROJECT AS MULTIMEDIA DESIGNER
                 </p>
               </div>
