--- a/src/twitter.html
+++ b/src/twitter.html
@@ -131,8 +131,8 @@
                 <img src="/images/twitter.png" class="w-full h-full" />
                 <div class="overlay">
                   <div class="text">
-                    <p class="font-semibold pb-6">TWITTER CLONE</p>
-                    <p class="font-thin line-through decoration-1">
+                    <p class="font-semibold pb-6">/ TWITTER CLONE</p>
+                    <p class="font-thin decoration-1">
                       FULL STACK PROJECT MADE WITH PYTHON, SQLITE AND TAILWIND
                       CSS
                     </p>
