--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link href="style.css" rel="stylesheet" />
     <script src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat+Subrayada:wght@400;700&family=Shadows+Into+Light&display=swap"
