--- a/src/contact.html
+++ b/src/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
 
     <script src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -99,6 +100,7 @@
         <a
           href="https://www.linkedin.com/in/emilie-fischer-515317234/"
           class="box-1 place-self-end"
+          target="_blank"
         >
           <button class="spin circle font-thin">LinkedIn</button>
         </a>
