--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" />
     <script src="index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -146,7 +146,7 @@
             </div>
           </a>
 
-          <a class="container" href="projects.html">
+          <a class="container" href="craftstudio.html">
             <img
               src="/images/craft_studio.jpeg"
               alt="Avatar"
