--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                   <p class="text-4xl font-light">FROM, COPENHAGEN</p>
                 </div>
                 <div class="pb-5 lg:pb-0">
-                  <img src="/images/arrowdown.svg" class="h-24" />
+                  <img src="./images/arrowdown.svg" class="h-24" />
                 </div>
               </div>
             </div>
