--- a/src/contact.html
+++ b/src/contact.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
 
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -92,7 +92,7 @@
         class="grid justify-center gap-4 lg:col-start-3 lg:col-span-1 pt-10 lg:pt-0"
       >
         <a href="tel:+4528513171" class="box-1 place-self-end">
-          <button class="spin circle font-bold">+45 28 51 31 71</button>
+          <button class="spin circle font-thin">+45 28 51 31 71</button>
         </a>
         <a href="mailto:emil609u@stud.kea.dk" class="box-1 place-self-end">
           <button class="spin circle font-thin">emil609u@stud.kea.dk</button>
