--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
     <div class="max-w-fit mx-auto p-4">
       <!-- HERO -->
       <!-- <div class="hero grid place-content-end lg:h-[45rem] pt-16"> -->
-      <div class="hero grid place-content-center h-screen">
+      <div class="hero grid place-content-center lg:h-screen">
         <div class="grid lg:grid-cols-2 lg:px-10 lg:gap-32">
           <div class="lg:relative">
             <div class="lg:absolute lg:bottom-0 lg:left-0">
