--- a/src/about.html
+++ b/src/about.html
@@ -129,9 +129,7 @@
       <!--  TOOLS SECTION -->
 
       <div class="py-20">
-        <h2 class="text-6xl lg:text-7xl lg:px-10 pb-10 anton_font">
-          / SOME KNOWN TOOLS
-        </h2>
+        <h2 class="text-6xl lg:text-7xl lg:px-10 pb-10 anton_font">/ TOOLS</h2>
         <div class="pb-10">
           <h3 class="font-semibold text-3xl lg:px-10 py-10">
             / <span class="text-[#c9d546]"> DEVELOPER </span> TOOLS
