--- a/src/about.html
+++ b/src/about.html
@@ -74,7 +74,7 @@
         <div class="lg:grid grid-cols-3">
           <div class="lg:col-start-1 lg:col-span-2">
             <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
-            <p class="text-3xl font-light lg:pr-24">
+            <p class="text-2xl lg:text-3xl font-light lg:pr-24">
               In January 2023, I proudly earned my degree as a
               <span class="text-[#c9d546]"> Multimedia Designer</span> from KEA
               - Copenhagen School of Design and Technology.
