--- a/src/craftstudio.html
+++ b/src/craftstudio.html
@@ -74,7 +74,7 @@
         <div class="grid lg:grid-cols-2 gap-10">
           <div class="lg:col-start-1 lg:col-span-1">
             <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
-            <p class="text-3xl font-light">
+            <p class="text-2xl lg:text-3xl font-light">
               This project served as the final exam project for the Multimedia
               Designer program. The objective was to create a visual identity
               for a company, and we selected Craft Studio, which lacked a visual
