--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,9 @@
 
         <div class="lg:grid grid-cols-3 lg:px-10 items-center">
           <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
-          <p class="lg:col-start-1 lg:col-span-2 text-3xl font-light lg:pr-24">
+          <p
+            class="lg:col-start-1 lg:col-span-2 text-2xl lg:text-3xl font-light lg:pr-24"
+          >
             I am Emilie,
             <br />
             A qualified Multimedia Designer who is presently pursuing advanced
