--- a/src/contact.html
+++ b/src/contact.html
@@ -71,7 +71,7 @@
           / LET'S TALK
         </h1>
         <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
-        <p class="text-3xl font-light lg:pr-24">
+        <p class="text-2xl lg:text-3xl font-light lg:pr-24">
           Feel free to get in touch
           <span class="text-[#c9d546]"> anytime </span>!
           <br />
