--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     />
     <title>Portfolio, Emilie Fischer</title>
   </head>
-  <body class="m-4">
+  <body class="overflow-hidden">
     <!-- Navigation Bar -->
     <header>
       <a href="index.html" class="text-2xl">
