--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     />
     <title>Portfolio, Emilie Fischer</title>
   </head>
-  <body class="overflow-hidden">
+  <body>
     <!-- Navigation Bar -->
     <header>
       <a href="index.html" class="text-2xl">
@@ -142,7 +142,7 @@
             <div class="overlay">
               <div class="text">
                 <p class="font-semibold pb-6">/ TWITTER CLONE</p>
-                <p class="font-thin decoration-1">
+                <p class="font-thin decoration-1 text-xs md:text-base">
                   FULL STACK PROJECT MADE WITH PYTHON, SQLITE AND TAILWIND CSS
                 </p>
               </div>
