--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
             <div class="overlay">
               <div class="text">
                 <p class="font-semibold pb-6">/ TWITTER CLONE</p>
-                <p class="font-thin decoration-1 text-xs md:text-base">
+                <p class="font-thin">
                   FULL STACK PROJECT MADE WITH PYTHON, SQLITE AND TAILWIND CSS
                 </p>
               </div>
@@ -158,7 +158,7 @@
             <div class="overlay">
               <div class="text">
                 <p class="font-semibold pb-6">/ CRAFT STUDIO</p>
-                <p class="font-thin decoration-1">
+                <p class="font-thin">
                   FINAL EXAM PROJECT AS MULTIMEDIA DESIGNER
                 </p>
               </div>
