--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
 
       <!-- WHO AM I SECTION -->
 
-      <div class="pb-16 lg:mt-52">
+      <div class="pb-16">
         <h2 class="text-6xl lg:text-7xl lg:px-10 pb-10 anton_font">
           / FROM MULTIMEDIA DESIGNER TO WEB DEVELOPER
         </h2>
