--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
       <label class="hamburger-menu">
         <input type="checkbox" />
       </label>
-      <aside class="sidebar lg:grid">
-        <nav class="grid lg:grid-col">
+      <aside class="sidebar grid">
+        <nav class="grid grid-col">
           <a
             href="index.html"
             class="py-4 text-6xl lg:text-8xl anton_font hover:text-[#c9d546] btn-one"
