--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
             A qualified Multimedia Designer who is presently pursuing advanced
             studies in order to transition into the field of
             <span class="text-[#c9d546]">web development</span>. I am currently
-            in my second semester at Copenhagen School of Design and Technology,
+            in my sixth semester at Copenhagen School of Design and Technology,
             where I have enrolled in the Web Development Top-Up program.
             <br />
             <br />
