--- a/src/craftstudio.html
+++ b/src/craftstudio.html
@@ -77,11 +77,10 @@
             <p class="text-2xl lg:text-3xl font-light">
               This project served as the final exam project for the Multimedia
               Designer program. The objective was to create a visual identity
-              for a company, and we selected Craft Studio, which lacked a visual
-              identity at the time. Our tasks included conducting a company
-              analysis, user testing, designing the visual identity, and
-              generating content to establish a cohesive brand identity for the
-              company.
+              for a company, which lacked a visual identity at the time. Our
+              tasks included conducting a company analysis, user testing,
+              designing the visual identity, and generating content to establish
+              a cohesive brand identity for the company.
             </p>
             <div class="grid grid-cols-2 lg:grid-cols-3 gap-5 py-10">
               <div class="col-span-1">
