--- a/src/twitter.html
+++ b/src/twitter.html
@@ -75,7 +75,7 @@
           <div class="lg:col-start-1 lg:col-span-1">
             <p class="text-7xl text-[#c9d546] font-extrabold">"</p>
             <p class="text-2xl lg:text-3xl font-light">
-              This project was part of my 1. semester Web Developement exam
+              This project was part of my 1. semester Web Development exam
               inwhich the ambitious endeavor aimed to closely replicate the
               design and functionalities of the original Twitter. During this
               project, I was introduced to Python, Bottle, and SQL for the first
