--- a/src/index.html
+++ b/src/index.html
@@ -110,16 +110,14 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <h1 class="bounce">This is my portfolio</h1>
-
-            <!-- <img src="/images/nino-b32798f0.png" />
+            <img src="/images/nino-b32798f0.png" />
             <div
-              class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
+              class="bounce lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
             >
               <a href="contact.html" class="box-1 place-self-end">
                 <button class="spin circle font-thin">LET'S TALK</button>
               </a>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
