--- a/src/index.html
+++ b/src/index.html
@@ -21,27 +21,6 @@
       rel="stylesheet"
     />
     <title>Portfolio, Emilie Fischer</title>
-    <style>
-      .bounce {
-        animation: bounce 2s infinite;
-      }
-
-      @keyframes bounce {
-        0%,
-        20%,
-        50%,
-        80%,
-        100% {
-          transform: translateY(0);
-        }
-        40% {
-          transform: translateY(-30px);
-        }
-        60% {
-          transform: translateY(-15px);
-        }
-      }
-    </style>
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -110,9 +89,9 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <img src="/images/nino-b32798f0.png" />
+            <img src="/images/hero_image.png" />
             <div
-              class="bounce lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
+              class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
             >
               <a href="contact.html" class="box-1 place-self-end">
                 <button class="spin circle font-thin">LET'S TALK</button>
