--- a/src/funny.html
+++ b/src/funny.html
@@ -4,56 +4,9 @@
   <body>
     <h1>What is this?</h1>
     <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
+      This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+  
+   
     </p>
     <p>
       This is my portfolio This is my portfolio This is my portfolio This is my
