modified:   src/about.html

--- a/src/about.html
+++ b/src/about.html
@@ -114,7 +114,7 @@
           <div class="grid place-items-center">
             <div>
               <img
-                src="/images/profile.png"
+                src="./images/profile.webp"
                 class="mt-10 lg:mt-0 lg:h-[40rem]"
               />
             </div>
