--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <img src="./images/profile.webp" />
+            <img src="./images/profile.png" />
             <div
               class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
             >
