--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,9 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <img src="./images/profile2.png" />
+            <div>
+              <img src="./images/profile1.png" />
+            </div>
             <div
               class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
             >
