modified:   src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <div>
+            <div class="h-40">
               <img src="./images/profile.png" class="opacity-20" />
             </div>
             <div
