--- a/src/index.html
+++ b/src/index.html
@@ -89,8 +89,8 @@
             </div>
           </div>
           <div class="lg:relative grid justify-center place-items-center">
-            <div class="h-40">
-              <img src="./images/profile.png" />
+            <div>
+              <img src="./images/profile.png" class="h-96" />
             </div>
             <div
               class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
