--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="lg:relative grid justify-center place-items-center">
             <div>
-              <img src="./images/profile.png" class="h-96" />
+              <img src="./images/hero_image.png" />
             </div>
             <div
               class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
