--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="lg:relative grid justify-center place-items-center">
             <div>
-              <img src="./images/hero_iamge.png" />
+              <img src="./images/hero_iamge.png" class="rounded-lg" />
             </div>
             <div
               class="lg:absolute rounded-full -left-[-3rem] -top-[12rem] py-16"
