--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
                 class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
               >
                 <img src="/images/SimpleIconsSqlite 1.svg" class="h-6 pr-2" />
-                <p class="text-xl font-thin">SQL</p>
+                <p class="text-xl font-thin">SQLite</p>
               </li>
             </div>
             <div class="col-span-1">
@@ -351,6 +351,22 @@
                 <p class="text-xl font-thin">Mongo DB</p>
               </li>
             </div>
+            <div class="col-span-1">
+              <li
+                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+              >
+                <img src="/images/BxBxlTailwindCss 1.svg" class="h-6 pr-2" />
+                <p class="text-xl font-thin">Tailwind CSS</p>
+              </li>
+            </div>
+            <div class="col-span-1">
+              <li
+                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+              >
+                <img src="/images/IcBaselineWordpress.svg" class="h-6 pr-2" />
+                <p class="text-xl font-thin">CMS</p>
+              </li>
+            </div>
           </div>
         </div>
 
@@ -380,22 +396,6 @@
             >
               <img src="/images/CibAdobeCreativeCloud 2.svg" class="h-6 pr-2" />
               <p class="text-xl font-thin">Adobe Cloud</p>
-            </li>
-          </div>
-          <div class="col-span-1">
-            <li
-              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
-            >
-              <img src="/images/BxBxlTailwindCss 1.svg" class="h-6 pr-2" />
-              <p class="text-xl font-thin">Tailwind CSS</p>
-            </li>
-          </div>
-          <div class="col-span-1">
-            <li
-              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
-            >
-              <img src="/images/IcBaselineWordpress.svg" class="h-6 pr-2" />
-              <p class="text-xl font-thin">CMS</p>
             </li>
           </div>
         </div>
