--- a/src/index.html
+++ b/src/index.html
@@ -398,6 +398,55 @@
               <p class="text-xl font-thin">Adobe Cloud</p>
             </li>
           </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img src="./images/IconoirAdobePhotoshop.svg" class="h-6 pr-2" />
+              <p class="text-xl font-thin">Photoshop</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobeIllustratorOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">Illustrator</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobePremiereOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">Premiere Pro</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobeIndesignOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">InDesign</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img src="./images/CiAdobeXd.svg" class="h-6 pr-2" />
+              <p class="text-xl font-thin">XD</p>
+            </li>
+          </div>
         </div>
       </div>
     </div>
