tool section done

--- a/src/about.html
+++ b/src/about.html
@@ -188,22 +188,8 @@
               <li
                 class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
               >
-                <img
-                  src="/images/TeenyiconsMongodbOutline.svg"
-                  class="h-6 pr-2"
-                />
-                <p class="text-xl font-thin">Mongo DB</p>
-              </li>
-            </div>
-            <div class="col-span-1">
-              <li
-                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
-              >
-                <img
-                  src="/images/next-js-seeklogo.com 1.svg"
-                  class="h-6 pr-2"
-                />
-                <p class="text-xl font-thin">NextJS</p>
+                <img src="/images/BasilFlaskAltOutline.svg" class="h-6 pr-2" />
+                <p class="text-xl font-thin">Bottle</p>
               </li>
             </div>
             <div class="col-span-1">
@@ -223,6 +209,17 @@
               >
                 <img src="/images/IonLogoReact 1.svg" class="h-6 pr-2" />
                 <p class="text-xl font-thin">React</p>
+              </li>
+            </div>
+            <div class="col-span-1">
+              <li
+                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+              >
+                <img
+                  src="/images/next-js-seeklogo.com 1.svg"
+                  class="h-6 pr-2"
+                />
+                <p class="text-xl font-thin">NextJS</p>
               </li>
             </div>
             <div class="col-span-1">
@@ -278,14 +275,6 @@
               <li
                 class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
               >
-                <img src="/images/BasilFlaskAltOutline.svg" class="h-6 pr-2" />
-                <p class="text-xl font-thin">Bottle</p>
-              </li>
-            </div>
-            <div class="col-span-1">
-              <li
-                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
-              >
                 <img
                   src="/images/vs-code-logo-microsoft-svgrepo-com.svg"
                   class="h-6 pr-2"
@@ -302,6 +291,17 @@
                   class="h-6 pr-2"
                 />
                 <p class="text-xl font-thin">Git</p>
+              </li>
+            </div>
+            <div class="col-span-1">
+              <li
+                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+              >
+                <img
+                  src="/images/TeenyiconsMongodbOutline.svg"
+                  class="h-6 pr-2"
+                />
+                <p class="text-xl font-thin">Mongo DB</p>
               </li>
             </div>
             <div class="col-span-1">
@@ -349,6 +349,55 @@
             >
               <img src="/images/CibAdobeCreativeCloud 2.svg" class="h-6 pr-2" />
               <p class="text-xl font-thin">Adobe Cloud</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img src="./images/IconoirAdobePhotoshop.svg" class="h-6 pr-2" />
+              <p class="text-xl font-thin">Photoshop</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobeIllustratorOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">Illustrator</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobePremiereOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">Premiere Pro</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img
+                src="./images/BasilAdobeIndesignOutline.svg"
+                class="h-6 pr-2"
+              />
+              <p class="text-xl font-thin">InDesign</p>
+            </li>
+          </div>
+          <div class="col-span-1">
+            <li
+              class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+            >
+              <img src="./images/CiAdobeXd.svg" class="h-6 pr-2" />
+              <p class="text-xl font-thin">XD</p>
             </li>
           </div>
         </div>
