--- a/src/fun.html
+++ b/src/fun.html
@@ -4,77 +4,31 @@
     <title>Emilie Fischer Portfolio</title>
   </head>
   <body>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
-    <p>
-      This is my portfolio This is my portfolio This is my portfolio This is my
-      portfolio
-    </p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
+    <p>This is my portfolio This is my portfolio This is my portfolio This is my portfolio</p>
   </body>
 </html>
+
+
+
+
