--- a/src/about.html
+++ b/src/about.html
@@ -226,6 +226,14 @@
               <li
                 class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
               >
+                <img src="./images/MdiCodeJson.svg" class="h-6 pr-2" />
+                <p class="text-xl font-thin">RestAPI</p>
+              </li>
+            </div>
+            <div class="col-span-1">
+              <li
+                class="flex text-lg font-thin border-2 border-[#c9d546] rounded-2xl py-2 px-4"
+              >
                 <img src="/images/SimpleIconsVim.svg" class="h-6 pr-2" />
                 <p class="text-xl font-thin">Vim</p>
               </li>
